# bizarre-engine-rust

./: .gitignore  Cargo.toml  README.html  README.md  compile_shaders.sh
.cargo/: config.toml
assets/fonts/: fira_sdf.fnt  noto_sans_bold_sdf.fnt
assets/shaders/: ambient.frag  base.frag  deferred.frag  deferred.vert  directional.frag  directional.vert  floor.frag  floor.vert  skybox.frag  test.frag  test.vert
bizarre_engine/: Cargo.toml
bizarre_engine/src/core/: logger.rs
bizarre_engine/src/core/logger/: logger.rs  terminal_escape_code.rs  terminal_macros.rs
crates/bizarre_common/: Cargo.toml
crates/bizarre_common/src/: handle.rs  lib.rs  resources.rs
crates/bizarre_core/: Cargo.toml
crates/bizarre_core/src/: app.rs  app_builder.rs  app_events.rs  core_events.rs  debug_stats.rs  event.rs  input.rs  layer.rs  lib.rs  schedule.rs  timing.rs  traits.rs
crates/bizarre_core/src/event/: event.rs  input_event.rs  key_codes.rs
crates/bizarre_core/src/input/: input.rs  input_event.rs  input_handler.rs  key_codes.rs  mouse_button.rs
crates/bizarre_events/: Cargo.toml
crates/bizarre_events/src/: event.rs  lib.rs  observer.rs  storage.rs  system.rs
crates/bizarre_impl/: Cargo.toml
crates/bizarre_impl/src/: lib.rs
crates/bizarre_layers/: Cargo.toml
crates/bizarre_layers/src/: camera_layer.rs  input_layer.rs  lib.rs  visual_layer.rs
crates/bizarre_logger/: Cargo.toml
crates/bizarre_logger/src/: global_loggers.rs  lib.rs  log_errors.rs  log_level.rs  log_target.rs  logger_impl.rs  terminal_escape_code.rs  terminal_macros.rs
crates/bizarre_memory/: Cargo.toml
crates/bizarre_memory/src/: allocation.rs  lib.rs
crates/bizarre_memory/src/allocation/: allocation_error.rs  allocator.rs  arena.rs  arena_chunk.rs  deallocation_error.rs  sync_arena_chunk.rs  thread_local_arena_chunk.rs  typed_arena.rs
crates/bizarre_render/: Cargo.toml
crates/bizarre_render/assets/shaders/: ambient.frag  ambient.vert  deferred.frag  deferred.vert  directional.frag  directional.vert  editor_background.frag  editor_background.vert  floor.frag  lighting.frag  lighting.vert  text.frag  text.vert
crates/bizarre_render/src/: assets.rs  lib.rs  render.rs  render_components.rs  render_systems.rs  vulkan.rs  vulkan_shaders.rs  vulkan_utils.rs
crates/bizarre_render/src/assets/: material.rs  material_loader.rs  mesh.rs  mesh_loader.rs  texture.rs
crates/bizarre_render/src/assets/material/: binding.rs  builtin_materials.rs  pass.rs  pipeline_features.rs
crates/bizarre_render/src/render/: batch.rs  bitmap_font.rs  constants.rs  cube_map.rs  devices.rs  errors.rs  global_context.rs  instance.rs  mesh.rs  pipeline.rs  queue_families.rs  render_math.rs  render_package.rs  render_submitter.rs  render_system.rs  renderer.rs  scene.rs  swapchain.rs  text.rs  texture.rs  vertex.rs  vulkan.rs
crates/bizarre_render/src/render/vulkan/: commands.rs  devices.rs  frame.rs  framebuffer.rs  instance.rs  pipeline.rs  queue_families.rs  render_pass.rs  render_sync.rs  shaders.rs  swapchain.rs  vertex.rs  vulkan_buffer.rs  vulkan_constants.rs  vulkan_cube_map.rs  vulkan_image.rs  vulkan_renderer.rs  vulkan_text.rs
crates/bizarre_render/src/render_components/: camera.rs  free_camera.rs  material_component.rs  mesh.rs  mesh_component.rs  transform.rs  window_component.rs
crates/bizarre_render/src/render_systems/: mesh_systems.rs  renderer_systems.rs
crates/bizarre_render/src/vulkan/: buffer.rs  device.rs  frame.rs  image.rs  instance.rs  pipeline.rs  render_pass.rs  swapchain.rs
crates/bizarre_render/src/vulkan_shaders/: ambient.rs  deferred.rs  directional.rs  floor.rs  geometry_pass.rs  lighting_pass.rs  shader_common.rs
crates/bizarre_render/src/vulkan_utils/: buffer.rs  cmd_buffer.rs  debug_utils.rs  framebuffer.rs  instance.rs  pipeline.rs  shader.rs  vulkan_memory.rs
crates/bizarre_render/src/vulkan_utils/pipeline/: ambient_pipeline.rs  deferred_pipeline.rs  directional_pipeline.rs  floor_pipeline.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs  sandbox_layer.rs
src/: lib.rs
