[package]
name = "bizarre_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
"bizarre_impl" = {path = "crates/bizarre_impl"}

[workspace]
members = [
    "crates/*",
    "sandbox"
]

default-members = ["sandbox"]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
nalgebra-glm = {version = "0.18.0", features = ["convert-bytemuck"]}
