[package]
name = "bizarre_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
winit = "0.28.7"
bizarre_logger = { path = "../bizarre_logger" }
bizarre_render = {path = "../bizarre_render"}
ctrlc = "3.4.1"
