[package]
name = "bizarre_layers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bizarre_core = { path = "../bizarre_core" }
bizarre_events = { path = "../bizarre_events" }
bizarre_render = { path = "../bizarre_render" }
bizarre_common = { path = "../bizarre_common" }
bizarre_logger = { path = "../bizarre_logger" }

nalgebra-glm = { workspace = true }
anyhow = { workspace = true }
specs = { workspace = true }
winit = { workspace = true }
