[package]
name = "bizarre_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "4.0.0"
winit = "0.28.7"
anyhow = { workspace = true }
thiserror = { workspace = true }
bizarre_logger = { path = "../bizarre_logger" }
vulkano = "0.33.0"
vulkano-win = "0.33.0"
vulkano-shaders = "0.33.0"
