[package]
name = "bizarre_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vulkan_debug"]
vulkan_debug = []


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
nalgebra-glm = { workspace = true }
specs = { workspace = true }

bizarre_logger = { path = "../bizarre_logger" }
bizarre_memory = { path = "../bizarre_memory" }
bizarre_common = { path = "../bizarre_common" }

tobj = "4.0.0"
png = "0.17.10"
winit = { workspace = true }
ash = "0.37.3+1.3.251"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
bmfont = "0.3.3"
shaderc = "0.8.3"
